--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.5",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
